[metadata]
name             = Mangdang
version          = 0.1.0
summary          = Mangdang code for minipupper
description-file = README.rst
author           = Mangdang
author-email     = info@mangdang.net
home-page        = https://www.mangdang.net

[files]
packages         = Mangdang

[global]
setup-hooks      = pbr.hooks.setup_hook

[options]
include_package_data = True

[options.package_data]
* = *.png

[entry_points]
console_scripts =
    calibrate = Mangdang.minipupper.calibrate_tool:main

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[build_sphinx]
all_files       = 1
build-dir       = doc/build
source-dir      = doc/source

[wheel]
universal       = 1
